# Cryo3d-editor

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
src/napari_cryo3d_editor/: _widget.py  napari.yaml
